--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,12 +1,19 @@
 .md-typeset__scrollwrap {
-   margin: 1em -1.2rem 1em -1.6rem;
+  margin: 0;
+  width: 100%;
 }
+
+.md-typeset .md-typeset__table {
+  padding: 0;
+  margin-top: 2em;
+}
+
 .md-typeset .admonition, .md-typeset details {
 	-webkit-box-shadow: none;
 	-moz-box-shadow: none;
 	box-shadow: none;
-	background-color: #262626;
-	font-size: 0.8rem;
+  background-color: #262626;
+  font-size: 0.6rem;
 }
 .md-typeset h3 {
     margin: 1.5rem 0 1.6rem;
